--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,26 @@
 steps:
-    id: 'tf init'
+  - id: 'tf-init'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
-    - '-c'
-    - | 
+      - '-c'
+      - | 
         terraform init
 
-    id: 'tf plan'
+  - id: 'tf-plan'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
-    - '-c'
-    - | 
+      - '-c'
+      - | 
         terraform plan
 
-    id: 'tf apply'
+  - id: 'tf-apply'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
-    - '-c'
-    - |   
+      - '-c'
+      - |   
         terraform apply -auto-approve
 
 
