--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,30 +1,28 @@
-options:
-  env:
-    - 'module_variable_optional_attrs'
-
 steps:
-  - id: 'tf-init'
+  - id: 'tf init'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
       - '-c'
       - | 
-        terraform init
+          terraform init
 
-  - id: 'tf-plan'
+  - id: 'tf plan'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
       - '-c'
       - | 
-        terraform plan
+          terraform plan
 
-  - id: 'tf-apply'
+  - id: 'tf apply'
     name: 'hashicorp/terraform:1.0.0'
     entrypoint: 'sh'
     args: 
       - '-c'
       - |   
-        terraform apply -auto-approve
+          terraform apply -auto-approve
 
-
+options:
+  env:
+    - 'TF_CLI_ARGS=-var experiments=module_variable_optional_attrs'
