--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,14 @@ steps:
       - | 
           terraform init
 
+  - id: 'tf destroy'
+    name: 'hashicorp/terraform'
+    entrypoint: 'sh'
+    args: 
+      - '-c'
+      - | 
+          terraform destroy -auto-approve
+
   - id: 'tf plan'
     name: 'hashicorp/terraform'
     entrypoint: 'sh'
